[package]
name = "mick"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
num_cpus = "1.15.0"
rand = { version = "0.8.5", features = ["small_rng"] }
threadpool = "1.8.1"
