[package]
name = "mick"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
debug = false
lto = "fat"
overflow-checks = false
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 1
debug = true

[profile.test]
opt-level = 1

[dependencies]
clap = { version = "4.2.5", features = ["derive"] }
crossterm = "0.26.1"
num_cpus = "1.15.0"
rand = { version = "0.8.5", features = [] }
threadpool = "1.8.1"
